Added time series plot for Texas

--- a/CIS 705 Final Report.ipynb
+++ b/CIS 705 Final Report.ipynb
@@ -102,7 +102,9 @@
     "## Noticing Trends in Texas | How are crops affected by freezing temperatures?\n",
     "We first noticed a delay between freeze event occurrences and reported bearing acreage in Texas in 1984. This pattern was seen once again with grapefruit and oranges between 1989 and 1990. Therefore, for analyzing the causative factors behind the trends of bearing acreage over time, it seemed important to look at extreme temperature lows that occurred during the previous season. \n",
     "\n",
-    "An article from [the Texas Agricultural Extension Service](https://aggie-horticulture.tamu.edu/citrus/l2319.htm) mirrored our findings, further highlighting the severity of crop loss experienced in the succeeding seasons after the frosts. \n"
+    "An article from [the Texas Agricultural Extension Service](https://aggie-horticulture.tamu.edu/citrus/l2319.htm) mirrored our findings, further highlighting the severity of crop loss experienced in the succeeding seasons after the frosts.\n",
+    "\n",
+    "![Texas Timeseries](texas.jpg)\n"
    ]
   },
   {
