Added validation hypothesis testing

--- a/CIS 705 Final Report.ipynb
+++ b/CIS 705 Final Report.ipynb
@@ -147,7 +147,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -192,7 +191,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validating and Evaluating the Analysis and Models"
+    "# Validating and Evaluating the Analysis and Models\n",
+    "\n",
+    "## Hypothesis Testing - Pearson's Correlation Statistic\n",
+    "\n",
+    "We performed hypothesis testing to try and validate the observed linear relationships between some of the weather and agricultural variables analyzed above. Our null hypotheses in all cases were that there is no linear relationship between each pair of weather and agricultural variables that we looked at. The test statistic that we used to test the null hypotheses was the Pearson's correlation coefficient. Under the assumption that the null hypothesis is true, we used a p-value of 0.05 to determine statistical significance. All p-values were generated via the `scipy.stats` package's built in `pearsonr()` function.\n",
+    "\n",
+    "### Days with Below Freezing Temperatures vs. Production\n",
+    "\n",
+    "When looking at the linear relationship between the number of days with below freezing temperatures in a year, and production measured in 1k short tons, we observed a strong negative correlation in grapefruit, a moderate negative correlation in lemons, and a weak negative correlation in oranges. When looking at the p-values, we see that this linear relationship is only statistically significant in grapefruit, which had a p-value of 0.0004. The p-values for oranges and lemons on the other hand were 0.9266 and 0.2736 respectively, indicating a failure to reject the null hypothesis that there is no linear relationship between these two variables in these crops. One would think that this is indicative of grapefruits being biologically less cold hardy than other citrus varieties, however our literature review has [indicated otherwise.](https://aggie-horticulture.tamu.edu/newsletters/hortupdate/2011/mar/citrus_freeze.html). However, oranges are considered to be somewhat more cold hardy than other fruits, requiring temperatures in the mid-20s before damage is incurred, which aligns with the lack of a strong linear relationship observed between freezing temperatures and production in this corp. Another possibility is that perhaps the orange and lemon farms whose data was collected by the USDA had employed countermeasures that allowed them to mitigate the effects of these extremes in cold on their crops, whereas the grapefruit farms did not. Fine grained data at the county and farm level would be required to validate and test this hypothesis though, which points to a potential direction for future study in this area.\n",
+    "\n",
+    "### Days with Below Freezing Temperatures vs. Bearing Acreage\n",
+    "\n",
+    "When looking at the potential linear relationship between the number of days with below freezing temperatures, and bearing acreage measured in 1k acres, we had observed moderate negative Pearson's correlations across all three citrus crops. When looking at the p-values, we saw that this relationship is only statistically valid in grapefruits and lemons, with p-values of 0.0186 and 0.0109 respectively. The p-value for oranges was 0.2181, indicating a failure to reject the null hypothesis that there is no linear relationship between these two variables in oranges. As highlighted previously, oranges are considered to be one of the more cold hardy citrus varieties, which might explain the lack of a statistically significant negative linear relationship between freezing temperatures and bearing acreage in this crop.\n",
+    "\n",
+    "### Temperature Range vs. Bearing Acreage\n",
+    "\n",
+    "When looking at the potential linear relationship between the yearly temperature range (max fahrenheit - min fahrenheit) and bearing acreage, we had observed a strong negative correlation in oranges, and moderate negative correlations in grapefruits and lemons. When looking at the p-values, we see that this relationship is only statistically significant in grapefruits and oranges, which had p-values of 0.0223 and 0.0007. The p-value for lemons was 0.0866, indicating a failure to reject the null hypothesis that there is no linear relationship between this two variables with regards to lemons.\n",
+    "\n",
+    "### Minimum Temperature vs. Bearing Acreage\n",
+    "\n",
+    "When looking at the potential linear relationship between the minimum yearly temperature in fahrenheit and the bearing acreage, we had observed a strong positive correlation in oranges, and moderate positive correlations in grapefruits and lemons. When looking at the p-values, we again see that this relationship is statistically significant in grapefruits and oranges, with p-values of 0.0425 and 0.0006 respectively, while not statistically significant in lemons, which had a p-value of 0.1032. This is to be expected after having seen similar results for temperature range, as temperature range is just a linear function of minimum temperature. In general, we would expect that as minimum yearly temperature goes up (indicating a less extreme low), the bearing acreage for the citrus crops in the respective season would be higher. The lack of a statistically significant relationship in lemons in conjunction with there being significant results for oranges and grapefruits might simply be indicative of noise in the data, lack of enough data points (the time series we looked at only spans 18 years), or the way that we joined the weather data with the agricultural data. Further exploration and slicing of the data is required to tease apart the complex and multifaceted interactions between the weather and agricultural variables that we analyzed.\n",
+    "\n",
+    "### Number of Days with Below Average Temperatures vs Yield Per Acre\n",
+    "\n",
+    "When looking at the potential linear relationship between the number of days with average temperatures below the yearly average, and yield per acre, we had observed weak negative correlations between these two variables with respect to all three citrus crops. We also saw that this relationship is not statistically significant in grapefruits, oranges, nor in lemons, which had p-values of 0.1426, 0.2400, and 0.0690 respectively, indicating a failure to reject our null hypothesis across the board.\n",
+    "\n",
+    "### Number of Days with Above Average Temperatures vs Yield Per Acre\n",
+    "\n",
+    "When looking at the potential linear relationship between yield per acre, and the number of days with average temperatures above the yearly average, we observed weak-to-strong negative correlations in all three citrus crops. When looking at the p-values, we see that this relationship is only statistically significant in grapefruits, which had a p-value of 0.0087. Oranges and lemons on the other hand had p-values of 0.0717 and 0.4615 respectively, indicating a failure to reject the null hypothesis that there is no linear relationship between these two variables with respect to these crops. While we only saw a statistically significant relationship in grapefruits, the existence of these negative relationships indicates that yield per acre in citrus could potentially be negatively effected by extreme highs in temperature, in addition to extreme lows. Such declines in yield per acre might potentially be due to damage caused by dessication or heat stress under high temperature regimes, but more analysis and data collection is needed to validate this hypothesis.\n",
+    "\n",
+    "\n",
+    "### Bearing Acreage vs. Yield Per Acre\n",
+    "\n",
+    "When looking at bearing acreage vs. yield per acre in the three citrus crops, we observed moderate to strong negative correlations between these two variables in all three. However, when looking at the p-values, we see that this relationship is only statistically significant in grapefruit and oranges, with p-values of 0.0018 and 0.0178 respectively. When looking at the relationship between these two variables in lemons, we see a p-value of only 0.1225, indicating a failure to reject the null hypothesis, that there is no linear relationship between these two variables in lemons. The presence of this linear relationship came as a surprise to us, and has led to the development of more hypotheses that we would like to explore in a future study. One hypothesis for this observed negative relationship between bearing acreage and yield per acre, is that perhaps as citrus farms are scaling back their bearing acreage, they are better able to utilize and tend to the producing acreage that they alread have, which is leading to an increase the the measured yield per acre. As the USDA data is aggregated, and does not reveal such fine grained details, more data collection at the county and farm level would be needed to explore and test this hypothesis.\n",
+    "\n",
+    "### Issues\n",
+    "\n",
+    "One issue that we had with attempting to evaluate the linear relationship between freezing temperatures and production in this study, is that production is a component not only of bearing acreage, but also yield per acre. The weather data that we collected spans the calendar year, whereas the agricultural data, while yearly, actually corresponds to the production season for each crop. Orange and grapefruit season does not start until November in California, and lemon season starts in August. Therefore, to better quantify the effects of temperature anomalies on yield per acre, which is more dependent upon recent fluctuations in weather, we would need to reagreggate the weather data into seasonal aggregates, to potentially see stronger relationships between weather variables and yield per acre.\n",
+    "\n",
+    "Another issue with using a statistic like number of days with below freezing temperatures as a proxy for extremes in cold, is that it does not provide any information as to the duration of time during which those freezing temperatures occured within a day. Since we generated this statistic by just counting the number of days that had a minimum temperature below freezing, and did not look at the span of hours within the day that had these extreme lows, we missed out on a lot of important information. Citrus crops will be damaged by extreme lows, but that damage will be more prone to manifesting if those extremes in temperature occur over an extended period of time without a break. We had attempted to capture this information by looking at the number of days in a year with temperatures close to their monthly extreme, in months that had extreme temperatures, but this is also a bad metric in hindsight, because only a few months out of an average year would be expected to have extreme lows (below freezing), and when looking at the relationship between this variable and production, we observed weak correlations across all three crops.\n"
    ]
   },
   {
@@ -283,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
