Cleaned up report notebook and made img directory

--- a/CIS 705 Final Report.ipynb
+++ b/CIS 705 Final Report.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pathway\n",
+    "# How do Climate Fluctuations Affect Crop Yields?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pathway\n",
     "\n",
     "This report maps out the steps we took to find correlations in weather patterns and crop yields for oranges, grapefruits, and lemons in California. The report is divided into the following sections:\n",
     "\n",
@@ -18,7 +25,7 @@
     "* Challenges | New Questions\n",
     "* Lessons Learned\n",
     "* Future Studies\n",
-    "* Resources\n"
+    "* Resources"
    ]
   },
   {
@@ -50,10 +57,10 @@
     "The following pie charts break down the production by percentage for oranges, grapefruit, and lemons by state:\n",
     "\n",
     "<div style=\"display: flex;\">\n",
-    "<img style= \"float: left;\" src=\"lemonspie.jpg\" height=\"400\" width=\"400\"> \n",
-    "<img style= \"float: center;\" src=\"grapefruitpie.jpg\" height=\"400\" width=\"400\"> \n",
-    "<img style= \"float: right;\" src=\"orangespie.jpg\" height=\"400\" width=\"400\">\n",
-    "<div/>\n",
+    "<img style= \"float: left;\" src=\"./images/lemonspie.jpg\" height=\"400\" width=\"400\"> \n",
+    "<img style= \"float: center;\" src=\"./images/grapefruitpie.jpg\" height=\"400\" width=\"400\"> \n",
+    "<img style= \"float: right;\" src=\"./images/orangespie.jpg\" height=\"400\" width=\"400\">\n",
+    "</div>\n",
     "\n"
    ]
   },
@@ -65,13 +72,13 @@
     "\n",
     "## The Agricultural Data\n",
     "\n",
-    "<img src=\"Economic_Research_Service_Logo.PNG\" height=400 width=400>\n",
+    "<img src=\"./images/Economic_Research_Service_Logo.PNG\" height=400 width=400>\n",
     "\n",
     "The agricultural yield and bearing acreage time series data was acquired from the United States Department of Agriculture's [Economic Research Service.](https://www.ers.usda.gov/data-products/fruit-and-tree-nut-data/fruit-and-tree-nut-yearbook-tables/) The USDA Fruit and Tree Nut Yearbook tables contain almost four decades of time-series data for U.S. bearing acreage, production, prices, etc. for a variety of Fruit and Nut Tree crops. We acquired our citrus crop data from a collection of these Fruit Tree Yearbook tables that look at bearing acreage, and yield per acre, for a time series ranging from 1980 through 2018. The citrus crop tables contained aggregated data for lemons, oranges, and grapefruit, for the states of California, Texas, Arizona, and Florida.\n",
     "\n",
     "## The Weather Data\n",
     "\n",
-    "<img src=\"National_Climatic_Data_Center_logo.png\">\n",
+    "<img src=\"./images/National_Climatic_Data_Center_logo.png\">\n",
     "\n",
     "The weather timeseries data was acquired from the NOAA's National Climatic Data Center, or NCDC for short. [An article on citrus production in California (page 2)](https://apps1.cdfa.ca.gov/FertilizerResearch/docs/Citrus_Production_CA.pdf) revealed that the counties of Kern, Fresno, Tulare, Ventura, and Riverside as being the top producers of citrus in the state of California, we decided to pull weather readings from stations in each of these five counties. The [Local Climatological Data](https://www.ncdc.noaa.gov/cdo-web/datatools/lcd) tool at the NCDC's website allowed us to pull hourly station readings, of temperature and relative humidity, from each of these five counties, spanning a time series from 2000 - 2018. The data came in the form of .csv files, which made them easy to process, but there was a significant delay between requesting the data, and when the data was actually served to us. Of that weather data, we decided to focus only on readings of hourly dry bulb temperature, and hourly relative humidity."
    ]
@@ -101,7 +108,7 @@
     "\n",
     "After having generated these yearly aggregate statistics for weather, we then joined the agricultural data with the weather data into pandas DataFrames objects. Working with DataFrames gave us easy to use snapshots of our data, and made generating plots and correlation statistics of the various columns both easy and intuitive.\n",
     "\n",
-    "![Pandas DataFrame](pd_data_frame.png)\n",
+    "![Pandas DataFrame](./images/pd_data_frame.png)\n",
     "\n",
     "*Example DataFrame generated for lemons*"
    ]
@@ -117,7 +124,7 @@
     "\n",
     "An article from [the Texas Agricultural Extension Service](https://aggie-horticulture.tamu.edu/citrus/l2319.htm) mirrored our findings, further highlighting the severity of crop loss experienced a succeeding season after the frosts.\n",
     "\n",
-    "![Texas Timeseries](texas.jpg)\n"
+    "![Texas Timeseries](./images/texas.jpg)\n"
    ]
   },
   {
@@ -142,7 +149,7 @@
     "\n",
     "*Practical Statistics for Data Scientists* emphasizes “by itself, the regression equation does not prove the direction of causation. Conclusions about causation must come from a broader context of understanding about the relationship.” For instance, nationally, there has been a noticeable decrease in bearing acreage for oranges, grapefruit, and lemons. in the past twenty years with a predicted decrease in the next five years. This answers the “what,” but further exploration of correlation is needed to discover the possibilities in the “why.”\n",
     "\n",
-    "<img src=\"bearingacreage.png\">\n",
+    "<img src=\"./images/bearingacreage.png\">\n",
     "\n"
    ]
   },
@@ -157,34 +164,47 @@
     "\n",
     "### Production vs. Freezing Temperatures\n",
     "We observed a strong negative correlation between the number of days out of the year where the temperature was below freezing and the production of grapefruit (-0.74). The same effect to a lesser degree was seen in lemons (-0.27) and oranges (-0.02).\n",
-    "<img src=\"g_bf_p_snc_.jpg\">\n",
-    "<img src=\"l_o_bf_p_mwnc.jpg\">\n",
+    "\n",
+    "<div style=\"display: flex;\">\n",
+    "<img style= \"float: left;\" src=\"./images/g_bf_p_snc_.jpg\" height=\"600\" width=\"600\"> \n",
+    "<img style= \"float: right;\" src=\"./images/l_o_bf_p_mwnc.jpg\" height=\"600\" width=\"600\">\n",
+    "</div>\n",
     "\n",
     "### Bearing Acreage vs. Below Freezing Temperatures\n",
     "There is a moderate negative correlation between days with temperatures below freezing and bearing acreage for all three citrus crops (grapefruit, -0.55; oranges, -0.31; lemons, -0.27).\n",
-    "<img src=\"o_g_l_bf_ba_mnc.jpg\">\n",
+    "\n",
+    "<img src=\"./images/o_g_l_bf_ba_mnc.jpg\">\n",
     "\n",
     "### Bearing Acreage vs. Temperature Range                             \n",
     "When looking at temperature range versus bearing acreage within a year, we observed a strong negative correlation in oranges (-0.72), as well as a moderate negative correlation in grapefruit (-0.53) and lemons (-0.42).\n",
-    "<img src=\"o_tr_ba_snc.jpg\">\n",
-    "<img src=\"g_l_tr_ba_mnc.jpg\">\n",
+    "\n",
+    "<div style=\"display: flex;\">\n",
+    "<img style=\"float: left;\" src=\"./images/o_tr_ba_snc.jpg\" height=\"600\" width=\"600\">\n",
+    "<img style=\"float: right;\" src=\"./images/g_l_tr_ba_mnc.jpg\" height=\"600\" width=\"600\">\n",
+    "</div>\n",
     "\n",
     "### Bearing Acreage vs. Minimum Temperature\n",
-    "When looking at minimum temperature versus bearing acreage in a given year, we observed a strong positive correlation in oranges (0.73) and a moderate positive correlation in grapefruit (0.48) and lemons (.40). This meant that as the higher the minimum temperature was in a year, the higher the bearing acreage. \n",
-    "<img src=\"o_mt_ba_spc.jpg\">\n",
-    "<img src=\"g_l_mt_ba_mpc.jpg\">\n",
+    "When looking at minimum temperature versus bearing acreage in a given year, we observed a strong positive correlation in oranges (0.73) and a moderate positive correlation in grapefruit (0.48) and lemons (.40). This meant that as the higher the minimum temperature was in a year, the higher the bearing acreage.\n",
+    "\n",
+    "<div style=\"display: flex;\">\n",
+    "<img style=\"float: left;\" src=\"./images/o_mt_ba_spc.jpg\" height=\"600\" width=\"600\">\n",
+    "<img style=\"float: right;\" src=\"./images/g_l_mt_ba_mpc.jpg\" height=\"600\" width=\"600\">\n",
+    "</div>\n",
     "\n",
     "### Yield Per Acre vs. Number of Days with Temperature Below the Yearly Average Temperature\n",
     "When looking at the number of days with an average temperature below the yearly average temperature within a given year, we found moderate negative correlations with yield per acre for all three citrus crops (grapefruit, -0.36; oranges, -0.29; lemons, -0.44).\n",
-    "<img src=\"o_g_l_atb_ypa_wnc.jpg\">\n",
+    "\n",
+    "<img src=\"./images/o_g_l_atb_ypa_wnc.jpg\">\n",
     "\n",
     "### Yield Per Acre vs. Number of Days with Temperature Above the Yearly Average Temperature\n",
     "We observed similar relationships between the number of days with above average temperatures and yield per acre across all three citrus crops (grapefruit, -0.60; oranges, -0.43; lemons, -0.19).\n",
-    "<img src=\"o_g_l_ata_ypa_wsnc.jpg\">\n",
+    "\n",
+    "<img src=\"./images/o_g_l_ata_ypa_wsnc.jpg\">\n",
     "\n",
     "### Bearing Acreage vs. Yield Per Acre\n",
     "In generating the correlation matrices, we saw a moderate-to-strong negative correlation between bearing acreage and yield per acre across all three citrus crops (grapefruit, -0.68; oranges, -0.55; lemons, -0.38). This led to a new question: Why does the yield per acre decrease as the bearing acreage increases?\n",
-    "<img src=\"o_g_l_ypa_ba_msnc.jpg\">"
+    "\n",
+    "<img src=\"./images/o_g_l_ypa_ba_msnc.jpg\">"
    ]
   },
   {
